<resources>
    <string name="app_name">COURSEWORK</string>
    <string-array name="days_array">
        <item>Select Day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="type_array">
        <item>Select Type</item>
        <item>Flow Yoga</item>
        <item>Aerial Yoga</item>
        <item>Family Yoga</item>
    </string-array>
    <string name="confirmation_screen_title">Confirm Class Details</string>
    <string name="confirmation_card_description">Contains all details for the class being confirmed.</string>

    <string name="label_class_type">Class Type:</string>
    <string name="label_day">Day:</string>
    <string name="label_time">Time:</string>
    <string name="label_capacity">Capacity:</string>
    <string name="label_duration">Duration:</string>
    <string name="label_price">Price:</string>
    <string name="label_intensity">Intensity:</string>
    <string name="label_description">Description:</string>
    <string name="no_description">No description provided.</string>


    <string name="action_edit">Edit</string>
    <string name="action_confirm">Confirm</string>
    <string name="detail">Detail</string>
    <string name="storage">Storage</string>
    <string name="manage">Manage</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="view">View Detail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="please_bring_your_own_yoga_mat_water_bottles_will_be_provided">Please bring your own yoga mat. Water bottles will be provided.</string>
    <string name="description">DESCRIPTION</string>
    <string name="no_description_provided">No description provided.</string>
    <string name="add_instance">Add Instance</string>
    <string name="date">Date</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="confirm">Confirm</string>
    <string name="review_and_save">Review and Save</string>
    <string name="vigorous">Vigorous</string>
    <string name="moderate">Moderate</string>
    <string name="intensity_level">Intensity Level</string>
    <string name="type_of_class">Type of class</string>
    <string name="edit_details">Edit Details</string>
    <string name="create_a_new_course">Create a New Course</string>

    <!-- Content descriptions for accessibility -->
    <string name="edit_yoga_class">Edit yoga class</string>
    <string name="delete_yoga_class">Delete yoga class</string>
    <string name="edit_class_instance">Edit class instance</string>
    <string name="delete_class_instance">Delete class instance</string>
    <string name="view_class_details">View class details</string>
    <string name="add_new_class">Add New Class</string>
    <string name="add_new_instance">Add new class instance</string>
    <string name="search_classes">Search yoga classes</string>
    <string name="clear_search">Clear search</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="class_type_icon">Class type indicator</string>
    <string name="teacher_icon">Teacher</string>
    <string name="calendar_icon">Calendar</string>
    <string name="time_icon">Time</string>
    <string name="capacity_icon">Capacity</string>
    <string name="duration_icon">Duration</string>
    <string name="yoga_pose_illustration">Yoga pose illustration</string>
    <string name="yoga_class_image">Yoga class preview image</string>


</resources>