<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ConfirmationActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="45dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editButton">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="411dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_class_type" />

                    <TextView
                        android:id="@+id/valType"
                        style="@style/ConfirmationCardTitle"
                        android:layout_marginBottom="12dp"
                        tools:text="Flow Yoga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_day" />

                    <TextView
                        android:id="@+id/valDay"
                        style="@style/ConfirmationValue"
                        android:layout_marginBottom="12dp"
                        tools:text="Monday" />

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_time" />

                    <TextView
                        android:id="@+id/valTime"
                        style="@style/ConfirmationValue"
                        android:layout_marginBottom="12dp"
                        tools:text="10:00" />

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_capacity" />


                    <TextView
                        android:id="@+id/valCapacity"
                        style="@style/ConfirmationValue"
                        android:layout_marginBottom="12dp"
                        tools:text="15 people" />

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_duration" />

                    <TextView
                        android:id="@+id/valDuration"
                        style="@style/ConfirmationValue"
                        android:layout_marginBottom="12dp"
                        tools:text="60 minutes" />

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_price" />

                    <TextView
                        android:id="@+id/valPrice"
                        style="@style/ConfirmationValue"
                        android:layout_marginBottom="12dp"
                        tools:text="£10" />

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_intensity" />

                    <TextView
                        android:id="@+id/valIntensity"
                        style="@style/ConfirmationValue"
                        android:layout_marginBottom="12dp"
                        tools:text="Moderate" />

                    <TextView
                        style="@style/ConfirmationLabel"
                        android:text="@string/label_description" />

                    <TextView
                        android:id="@+id/valDescription"
                        style="@style/ConfirmationValue"
                        tools:text="A flowing, dynamic yoga class to energize the body and mind." />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/action_edit"
                app:layout_constraintBottom_toTopOf="@+id/card"
                app:layout_constraintEnd_toStartOf="@+id/confirmButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/action_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editButton"
                app:layout_constraintTop_toTopOf="@+id/editButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>